[package]
name = "gipfeli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3.4"
clap = { version = "4.2.5", features = ["derive"] }
cli-clipboard = "0.4.0"
glob = "0.3.1"
tar = "0.4.38"
z85 = "3.0.5"
